--- a/styles.css
+++ b/styles.css
@@ -38,25 +38,34 @@ h2 {
 #email {
     margin-top: 13px;
     padding: 15px;
+    
 }
 
 #pswrd {
     padding: 15px;
+    margin-bottom: 15px;
 }
 
 .input {
     border: 2px solid #c1c9c6;
 }
 
-#btn {
-    padding: 15px 75px;
+button {
+    padding: 15px 72px;
     margin-top: 20px;
     margin-bottom: 20px;
-    background-color: slateblue;
+    background: slateblue;
     color: white;
     border-radius: 5px;
     border: none;
     cursor: pointer;
+    margin-bottom: 15px;
+}
+
+button:active {
+    background: white;
+    color: slateblue;
+    border: slateblue solid 1px;
 }
 
 a {
@@ -66,4 +75,9 @@ a {
     border-radius: 20px;
     color: #9a9c9b;
     font-size: 12px;
+    margin-top: 15px;
+}
+
+a:hover {
+    text-decoration: underline;
 }
