--- a/styles.css
+++ b/styles.css
@@ -44,17 +44,22 @@ h2 {
 
 #email {
     margin-top: 13px;
-    padding: 15px;
+    padding: 10px;
     display: flex;
 }
 
 #pswrd {
-    padding: 15px;
+    padding: 10px;
     margin-bottom: 5px;
     display: flex;
 }
 
-#cbox {
+#bx {
+    margin-left: 3rem;
+    margin-right: 3rem;
+}
+
+.cbox {
     margin-bottom: 25px;
     font-size: 10px;
 }
@@ -99,4 +104,6 @@ a:hover {
     flex-direction: column;
     align-items: center;
     padding: 10px;
+    margin-top: 1rem;
 }
+
