--- a/styles.css
+++ b/styles.css
@@ -78,7 +78,7 @@ button {
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
 }
 
 button:active {
@@ -104,7 +104,7 @@ a:hover {
     flex-direction: column;
     align-items: center;
     padding: 10px;
-    margin-top: 1rem;
+    margin-top: 5px;
 }
 
 @media (max-width: 600px) {
